LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/Account_Territory__c.object-meta.xml
<CustomObject>
    <description>Account territory used in account owner assignment rules.</description>
    <label>Account Territory</label>
    <nameField>
        <label>Account Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>