LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/Account_Executive_Rep_2__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive_Rep_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2020-04-13 - N. Ehrmann - A secondary AE for redundancy. This will also be used by TERRITORY assignment code.</description>
    <label>AE 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Territories_Secondary_AE</relationshipName>
    <type>Lookup</type>
</CustomField>