LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/Account_Executive_Rep_3__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive_Rep_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MANUAL - A 3rd AE on the team for notification purposes (HQL emails). This individual will not be assigned any Accounts / Opportunities automatically.</description>
    <label>AE 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Territories_AE3</relationshipName>
    <type>Lookup</type>
</CustomField>