LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/Account_Executive_Rep__c.field-meta.xml
<CustomField>
    <fullName>Account_Executive_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AE 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Territories_Primary_AE</relationshipName>
    <type>Lookup</type>
</CustomField>