LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/AE_Manager__c.field-meta.xml
<CustomField>
    <fullName>AE_Manager__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + Account_Executive_Rep__r.ManagerId, Account_Executive_Rep__r.Manager.FirstName + &quot; &quot; + Account_Executive_Rep__r.Manager.LastName, &quot;_blank&quot;)</formula>
    <label>AE Manager</label>
    <type>Text</type>
</CustomField>