LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/AE_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>AE_Manager_Email__c</fullName>
    <formula>Account_Executive_Rep__r.Manager.Email</formula>
    <label>AE Manager Email</label>
    <type>Text</type>
</CustomField>