LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/AE_Manager_Territory__c.field-meta.xml
<CustomField>
    <fullName>AE_Manager_Territory__c</fullName>
    <label>AE Manager Territory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Central</fullName>
            </value>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>