LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/AM_1__c.field-meta.xml
<CustomField>
    <fullName>AM_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Primary AM assigned to account territory</description>
    <label>AM 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Territories7</relationshipName>
    <type>Lookup</type>
</CustomField>