LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/AM_2__c.field-meta.xml
<CustomField>
    <fullName>AM_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Second AM assigned to account territory</description>
    <label>AM 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Territories8</relationshipName>
    <type>Lookup</type>
</CustomField>