LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/AM_Territory__c.field-meta.xml
<CustomField>
    <fullName>AM_Territory__c</fullName>
    <label>AM Territory</label>
    <type>TextArea</type>
</CustomField>