LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/Associated_Geos__c.field-meta.xml
<CustomField>
    <fullName>Associated_Geos__c</fullName>
    <label>Associated Geos</label>
    <type>TextArea</type>
</CustomField>