LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/BDR_Manager__c.field-meta.xml
<CustomField>
    <fullName>BDR_Manager__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + Business_Development_Rep__r.ManagerId, Business_Development_Rep__r.Manager.FirstName + &quot; &quot; + Business_Development_Rep__r.Manager.LastName, &quot;_blank&quot;)</formula>
    <label>BDR Manager</label>
    <type>Text</type>
</CustomField>