LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/BDR_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>BDR_Manager_Email__c</fullName>
    <formula>Business_Development_Rep__r.Manager.Email</formula>
    <label>BDR Manager Email</label>
    <type>Text</type>
</CustomField>