LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/Business_Development_Rep_2__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Rep_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2020-04-13 - N. Ehrmann - MANUAL - The secondary BDR on this territory for redundancy. Used by TERRITORY assignment code.</description>
    <label>BDR 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Territories_Secondary_BDR</relationshipName>
    <type>Lookup</type>
</CustomField>