LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/Business_Development_Rep_3__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Rep_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>MANUAL - A spot for a 3rd BDR in larger teams. This does not get assigned Prospects, but will be notified for HQLs.</description>
    <label>BDR 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Territories</relationshipName>
    <type>Lookup</type>
</CustomField>