LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/Business_Development_Rep__c.field-meta.xml
<CustomField>
    <fullName>Business_Development_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BDR 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Territories_Primary_BDR</relationshipName>
    <type>Lookup</type>
</CustomField>