LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/ENRICH_Budget__c.field-meta.xml
<CustomField>
    <fullName>ENRICH_Budget__c</fullName>
    <defaultValue>5</defaultValue>
    <description>2020-03-25 - N. Ehrmann - MANUAL - Editable by Sales Management. This field works with the ENRICH Lightning Component(s) to determine if a territory has already used its 14-day limit of enrichment requests. A blank value indicates unlimited requests.</description>
    <label>Enrichment Budget</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>