LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/Marketing_Development_Rep__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Development_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Development Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Territories2</relationshipName>
    <type>Lookup</type>
</CustomField>