LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/MDR_Manager__c.field-meta.xml
<CustomField>
    <fullName>MDR_Manager__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) + Marketing_Development_Rep__r.ManagerId, Marketing_Development_Rep__r.Manager.FirstName + &quot; &quot; + Marketing_Development_Rep__r.Manager.LastName, &quot;_blank&quot;)</formula>
    <label>MDR Manager</label>
    <type>Text</type>
</CustomField>