LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/MDR_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>MDR_Manager_Email__c</fullName>
    <formula>Marketing_Development_Rep__r.Manager.Email</formula>
    <label>MDR Manager Email</label>
    <type>Text</type>
</CustomField>