LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/Q1_Quota_Expansion__c.field-meta.xml
<CustomField>
    <fullName>Q1_Quota_Expansion__c</fullName>
    <label>Q1 Quota (Expansion)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>