LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/Q2_Quota_Direct__c.field-meta.xml
<CustomField>
    <fullName>Q2_Quota_Direct__c</fullName>
    <label>Q2 Quota (Direct)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>