LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/Q3_Quota_Direct__c.field-meta.xml
<CustomField>
    <fullName>Q3_Quota_Direct__c</fullName>
    <label>Q3 Quota (Direct)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>