LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/SE_1__c.field-meta.xml
<CustomField>
    <fullName>SE_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SE 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Territories3</relationshipName>
    <type>Lookup</type>
</CustomField>