LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/SE_2__c.field-meta.xml
<CustomField>
    <fullName>SE_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SE 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Territories4</relationshipName>
    <type>Lookup</type>
</CustomField>