LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/SE_3__c.field-meta.xml
<CustomField>
    <fullName>SE_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SE 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Territories5</relationshipName>
    <type>Lookup</type>
</CustomField>