LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/SE_4_c__c.field-meta.xml
<CustomField>
    <fullName>SE_4_c__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SE 4</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Territories6</relationshipName>
    <type>Lookup</type>
</CustomField>