LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/Territory_Group_20__c.field-meta.xml
<CustomField>
    <fullName>Territory_Group_20__c</fullName>
    <inlineHelpText>To which territory group will this territory belong when we shift to 20 AE territories?</inlineHelpText>
    <label>Territory Group (20)</label>
    <type>TextArea</type>
</CustomField>