LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/fields/Territory_Group__c.field-meta.xml
<CustomField>
    <fullName>Territory_Group__c</fullName>
    <description>2020-04-13 - N. Ehrmann - MANUAL - When adding new territories, consider placing them into a group to allow for easier reporting. This field is placed onto the Account via a formula.</description>
    <label>Territory Group</label>
    <length>100</length>
    <type>Text</type>
</CustomField>