LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/listViews/Active_Account_Territories.listView-meta.xml
<ListView>
    <fullName>Active_Account_Territories</fullName>
    <columns>Territory_Group__c</columns>
    <columns>NAME</columns>
    <columns>AM_Territory__c</columns>
    <columns>Associated_Geos__c</columns>
    <columns>Account_Executive_Rep__c</columns>
    <columns>Account_Executive_Rep_2__c</columns>
    <columns>AE_Manager__c</columns>
    <columns>Business_Development_Rep__c</columns>
    <columns>Business_Development_Rep_2__c</columns>
    <columns>BDR_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>Account_Executive_Rep_3__c</columns>
    <columns>Account_Executive_Team_3__c</columns>
    <columns>Business_Development_Rep_3__c</columns>
    <columns>Business_Development_Team_3__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>Active Account Territories</label>
</ListView>