LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Territory_Group__c</columns>
    <columns>NAME</columns>
    <columns>Account_Executive_Rep__c</columns>
    <columns>Business_Development_Rep__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>