LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/listViews/All_Active_Territories.listView-meta.xml
<ListView>
    <fullName>All_Active_Territories</fullName>
    <columns>Territory_Group_20__c</columns>
    <columns>Territory_Group__c</columns>
    <columns>NAME</columns>
    <columns>Business_Development_Rep__c</columns>
    <columns>Business_Development_Rep_2__c</columns>
    <columns>Business_Development_Rep_3__c</columns>
    <columns>BDR_Manager__c</columns>
    <columns>Associated_Geos__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Active Territories - BDR view</label>
</ListView>