LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/listViews/All_Active_Territories_AM_view.listView-meta.xml
<ListView>
    <fullName>All_Active_Territories_AM_view</fullName>
    <columns>Territory_Group__c</columns>
    <columns>NAME</columns>
    <columns>AM_1__c</columns>
    <columns>AM_2__c</columns>
    <columns>AM_Territory__c</columns>
    <columns>Associated_Geos__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <label>All Active Territories - AM view</label>
</ListView>