LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/listViews/APAC_EMEA_Active_Territories_BDR_view.listView-meta.xml
<ListView>
    <fullName>APAC_EMEA_Active_Territories_BDR_view</fullName>
    <columns>NAME</columns>
    <columns>Business_Development_Rep__c</columns>
    <columns>Business_Development_Rep_2__c</columns>
    <columns>Business_Development_Rep_3__c</columns>
    <columns>Business_Development_Team_3__c</columns>
    <columns>Associated_Geos__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </filters>
    <filters>
        <field>Territory_Group__c</field>
        <operation>equals</operation>
        <value>APAC,EMEA</value>
    </filters>
    <label>APAC/ EMEA Active Territories - BDR view</label>
</ListView>