LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/listViews/EMEA_APAC_Countries.listView-meta.xml
<ListView>
    <fullName>EMEA_APAC_Countries</fullName>
    <columns>Territory_Group__c</columns>
    <columns>NAME</columns>
    <columns>Account_Executive_Rep__c</columns>
    <columns>Account_Executive_Rep_2__c</columns>
    <columns>Account_Executive_Rep_3__c</columns>
    <columns>Business_Development_Rep__c</columns>
    <columns>Business_Development_Rep_2__c</columns>
    <columns>Business_Development_Rep_3__c</columns>
    <columns>AE_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Territory_Group__c</field>
        <operation>contains</operation>
        <value>EMEA,APAC</value>
    </filters>
    <label>EMEA / APAC Countries</label>
</ListView>