LWCLearnwithFLOWOrg/force-app/main/default/objects/Account_Territory__c/listViews/Inactive_Audit.listView-meta.xml
<ListView>
    <fullName>Inactive_Audit</fullName>
    <columns>Territory_Group_20__c</columns>
    <columns>Territory_Group__c</columns>
    <columns>NAME</columns>
    <columns>Account_Executive_Rep__c</columns>
    <columns>Account_Executive_Rep_2__c</columns>
    <columns>Account_Executive_Rep_3__c</columns>
    <columns>Account_Executive_Team_3__c</columns>
    <columns>AE_Manager__c</columns>
    <columns>Business_Development_Rep__c</columns>
    <columns>Business_Development_Rep_2__c</columns>
    <columns>Business_Development_Rep_3__c</columns>
    <columns>Business_Development_Team_3__c</columns>
    <columns>BDR_Manager__c</columns>
    <columns>Status__c</columns>
    <columns>AM_Territory__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Inactive</value>
    </filters>
    <label>Inactive Audit</label>
</ListView>